--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,24 @@ body {
 	justify-content: space-between;
 }
 
+@media screen and (min-width: 768px) {
+	.main {
+		width: 95vw;
+		align-items: center;
+	}
+}
+
 /* -----HEADER----- */
 .header {
 	padding: 1.2rem 0 0.5rem 0.8rem;
 	border-bottom: 2px solid var(--color-red);
+}
+
+@media screen and (min-width: 768px) {
+	.header {
+		width: 300px;
+		text-align: center;
+	}
 }
 
 .header .header__title {
@@ -50,10 +64,22 @@ body {
 	color: var(--color-red);
 }
 
+@media screen and (min-width: 768px) {
+	.header .header__title {
+		font-size: 1.87rem;
+	}
+}
+
 .header .header__powered {
 	color: #fff;
 	font-weight: 300;
 	font-size: 0.75rem;
+}
+
+@media screen and (min-width: 768px) {
+	.header .header__powered {
+		font-size: 1rem;
+	}
 }
 
 /* -----RESULTADO----- */
@@ -70,6 +96,12 @@ body {
 	font-weight: 400;
 }
 
+@media screen and (min-width: 768px) {
+	.resultado .resultado__text {
+		font-size: 1.25rem;
+	}
+}
+
 /* -----BOTON----- */
 .boton {
 	background-color: var(--color-black);
@@ -82,6 +114,21 @@ body {
 	border-radius: 1.56rem;
 }
 
+@media (min-width: 568px) and (orientation: landscape) {
+	.boton {
+		width: 250px;
+		height: 150px;
+		margin-bottom: 1rem;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.boton {
+		width: 280px;
+		margin-bottom: 3rem;
+	}
+}
+
 .boton .boton__circle {
 	background-image: linear-gradient(0deg, var(--color-orange), var(--color-red));
 	padding: 1rem;
@@ -90,6 +137,13 @@ body {
 	border-radius: 50%;
 	box-shadow: 0 12px 18px -10px rgba(248, 54, 0, 0.25), 0 -12px 18px -10px rgba(248, 54, 0, 0.25);
 	transition: all 0.3s;
+}
+
+@media (min-width: 568px) and (orientation: landscape) {
+	.boton .boton__circle {
+		width: 4rem;
+		height: 4rem;
+	}
 }
 
 .boton .boton__circle:active {
@@ -101,4 +155,10 @@ body {
 	width: 3rem;
 	color: var(--color-black);
 	text-shadow: 0 4px 4px rgba(15, 52, 67, 0.21);
+}
+
+@media (min-width: 568px) and (orientation: landscape) {
+	.boton .boton__circle svg {
+		width: 2rem;
+	}
 }
