--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,9 @@ a:visited{
 	border-radius: 50%;
 	box-shadow: 0 12px 18px -10px rgba(248, 54, 0, 0.25), 0 -12px 18px -10px rgba(248, 54, 0, 0.25);
 	transition: all 0.3s;
+	outline: none;
+	border: none;
+	cursor: pointer;
 }
 
 @media (min-width: 568px) and (orientation: landscape) {
